# django-ninja-simple-jwt

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  manifest.in  mypy.ini  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: auth_api_design.md  settings.md
ninja_simple_jwt/: admin.py  apps.py  settings.py  utils.py
ninja_simple_jwt/auth/: ninja_auth.py
ninja_simple_jwt/auth/views/: api.py  schemas.py
ninja_simple_jwt/jwt/: json_encode.py  key_creation.py  key_retrieval.py  key_store.py  token_operations.py
ninja_simple_jwt/management/commands/: make_rsa.py
tests/: manage.py  settings.py  test_something.py  urls.py
tests/test_auth/: test_api.py  test_ninja_auth.py  test_utils.py
tests/test_jwt/: test_json_encode.py  test_token_operations.py
